--- a/corehq/apps/userreports/templates/userreports/configurable_report.html
+++ b/corehq/apps/userreports/templates/userreports/configurable_report.html
@@ -62,7 +62,11 @@
 
         // Bind the ReportConfigsViewModel to the save button.
         var defaultConfig = {{ default_config|JSON }};
-        defaultConfig.date_range = null;
+        {% if report.has_datespan %}
+            defaultConfig.date_range = 'last7';
+        {% else %}
+            defaultConfig.date_range = null;
+        {% endif %}
         $("#savedReports").reportUserConfigurableConfigEditor({
             filterForm: $("#report-filters"),
             items: {{ report_configs|JSON }},
